tests/miniJava/neg/006789_mutation.MiniJava
class java true public static void Main ( String [ ] java ) { { } } }
